--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -1,1 +1,13 @@
-<h1>Howdy</h1>
+<h3>Welcome to Digital Clue!</h3>
+
+<div>
+  <a href="/new">
+    <button>New game</button>
+  </a>
+</div>
+
+<div>
+  <a href="/join">
+      <button>Join game</button>
+  </a>
+</div>
