--- a/app/views/launch/join.html.erb
+++ b/app/views/launch/join.html.erb
@@ -1,1 +1,20 @@
-<h1>howdy</h1>
+<h3>Join a game</h3>
+
+<hr>
+
+<form action="/join_game" method="post">
+  <div>
+    <label for="title_box">
+      Game Password
+    </label>
+
+    <input type="text" id="title_box" name="query_title">
+  </div>
+  
+<div>
+  <a href="/join">
+      <button>Join</button>
+  </a>
+</div>
+
+<hr>
