--- a/app/views/launch/join.html.erb
+++ b/app/views/launch/join.html.erb
@@ -1,4 +1,4 @@
-<h3>Join a game</h3>
+<!--<h3>Join a game</h3>
 
 <hr>
 
@@ -17,4 +17,17 @@
   </a>
 </div>
 
-<hr>
+<hr>-->
+
+<h3>Join a Game</h3>
+
+<%= form_with url: join_path, method: :post, local: true do %>
+  <div>
+    <label for="game_key">Game Key</label>
+    <%= text_field_tag :query_key, nil, id: 'game_key' %>
+  </div>
+
+  <div>
+    <%= submit_tag 'Join Game' %>
+  </div>
+<% end %>
